# repopilot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
docs/agents/: README.md  application.md  domain.md  infrastructure.md  interface.md  testing.md
scripts/: install-gitlab.ps1  install-gitlab.sh  publish-gitlab.ps1  publish-gitlab.sh
src/: lib.rs  main.rs
src/application/: mod.rs  ports.rs
src/application/config/: mod.rs
src/application/usecases/: auth_provider.rs  auth_vcs.rs  check_update.rs  edit_config.rs  inspect_config.rs  mod.rs
src/application/usecases/review_pr/: context.rs  dedupe.rs  mod.rs  providers.rs  publish.rs
src/domain/: mod.rs  policy.rs  review.rs  target.rs
src/infrastructure/: mod.rs  render.rs
src/infrastructure/adapters/: config_repository.rs  host_token_resolver.rs  markdown_renderer.rs  mod.rs  provider_authenticator.rs  provider_factory.rs  reporter.rs  system_prompt_resolver.rs  target_resolver.rs  update_checker.rs  user_confirmer.rs  vcs_authenticator.rs  vcs_factory.rs
src/infrastructure/config/: inspection.rs  loader.rs  mod.rs  resolve.rs  types.rs  utils.rs
src/infrastructure/providers/: anthropic.rs  api_runner.rs  command_runner.rs  gemini.rs  mod.rs  openai.rs  prompt.rs  usage_parser.rs
src/infrastructure/vcs/: github.rs  gitlab.rs  mod.rs
src/interface/: cli.rs  composition.rs  mod.rs  repl.rs  repl_input.rs
src/interface/cli/: command.rs  composition.rs  mod.rs  repl.rs  repl_input.rs
