[package]
name = "prpilot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prpilot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
percent-encoding = "2.3"
crossterm = "0.28"
